--- a/style.css
+++ b/style.css
@@ -271,3 +271,47 @@ a:visited{
     width: 150px;
     border: 1px solid #000;
 }
+/*footer*/
+.footer{
+    align-items: start;
+    background-color: aquamarine;
+    display:flex;
+    justify-content: space-between;
+    padding:10px 20px;
+    margin:0;
+}
+ul{
+    list-style: none;
+    margin:10px ;
+    padding: 0;
+}
+li{
+    padding-bottom: 3px;
+}
+.footer2{
+    align-items: center;
+    display:flex;
+    justify-content: space-between;
+}
+.footer2 ul{
+    align-items: center;
+    display:flex;
+    justify-content: space-between;
+}
+.footer2 li {
+    padding:0px 10px ;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    color: rgb(7, 7, 7);
+}
+h6{
+    font-size: large;
+    font-weight: bold;
+
+}
+.logo h6{
+    margin:20px 0px 10px 0px;
+}
